--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   bloc: ^8.1.1
   equatable: ^2.0.5
 
+  google_fonts: ^4.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
